--- a/warehouse/src/main/resources/application.properties
+++ b/warehouse/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=warehouseDB
 spring.mongodb.embedded.version=3.4.3
+
+
+inventory.get.endpoint=http://localhost:8080/api/inventories/
+
+inventory.put.endpoint=http://localhost:8080/api/inventories/
